--- a/Biblioteca/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/Biblioteca/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -46,6 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Comedia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Comedia.Designer.cs">
+      <DependentUpon>Comedia.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Ficcion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ficcion.Designer.cs">
+      <DependentUpon>Ficcion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,6 +70,18 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Guerra.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Guerra.Designer.cs">
+      <DependentUpon>Guerra.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Historia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Historia.Designer.cs">
+      <DependentUpon>Historia.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,11 +90,29 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Terror.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Terror.Designer.cs">
+      <DependentUpon>Terror.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Comedia.resx">
+      <DependentUpon>Comedia.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ficcion.resx">
+      <DependentUpon>Ficcion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Guerra.resx">
+      <DependentUpon>Guerra.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Historia.resx">
+      <DependentUpon>Historia.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
@@ -84,6 +126,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Terror.resx">
+      <DependentUpon>Terror.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -98,6 +143,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Generos\Aventura.txt" />
+    <Content Include="Generos\Ficcion.txt" />
+    <Content Include="Generos\Guerras.txt" />
+    <Content Include="Generos\Terror.txt" />
     <Content Include="Usuarios\TextFile1.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
