--- a/Biblioteca/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/Biblioteca/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Agregar Libro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Agregar Libro.Designer.cs">
+      <DependentUpon>Agregar Libro.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +72,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Agregar Libro.resx">
+      <DependentUpon>Agregar Libro.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
